--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <meta content='text/html; charset=gb2312' http-equiv='Content-Type'>
         <title>Xiaozhi Chen's Homepage</title>
         <!-- 新 Bootstrap 核心 CSS 文件 -->
-        <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
         <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-        <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 
         <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-        <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script src="https://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
         <!--script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.js"></script-->
         <script src="masonry.pkgd.min.js"></script>
