--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ div.paper pre {
                     </div>
                     <div class="panel-body">
                         <ul>
-                          <li>My research interests lie in computer vision and machine learning, with particular interest in 2D/3D object detection and its applications on autonomous driving. I am supervised by Prof. <a href="mhm" target = "_blank">Huimin Ma</a>.
+                          <li>My research interests lie in computer vision and machine learning, with particular interest in 2D/3D object detection and its applications on autonomous driving. I am supervised by Prof. <a href="http://3dimage.ee.tsinghua.edu.cn/mhm" target = "_blank">Huimin Ma</a>.
                               <li>July 2016 - Sep. 2016, intern in Baidu Autonomous Driving Unit (ADU).
                           <li>Jan. 2015 - May 2015, visited <a href="http://learning.cs.toronto.edu" target="_blank">Machine Learning Group</a> at University of Toronto, woking with Prof. <a href="http://www.cs.toronto.edu/~urtasun" target="_blank">Raquel Urtasun</a> and Prof. <a href="http://www.cs.utoronto.ca/~fidler" target="_blank">Sanja Fidler</a>.
                         </ul>
