--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ div.paper pre {
                             <td class="paper">
                                 <p><b>3D Object Proposals using Stereo Imagery for Accurate Object Class Detection</b></br>
                                 <b>Xiaozhi Chen</b>*, Kaustav Kunku*, Yukun Zhu, Huimin Ma, Sanja Fidler, Raquel Urtasun</br>
-                                <i>to appear in Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2017</i></br>
+                                <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2017</i></br>
                                 <a href = "https://arxiv.org/abs/1608.07711" target="_blank"><font>Paper</font></a>
                                 / <a href="javascript:toggle_visibility('pami17chen')">Bibtex</a></br>
                               <pre id="pami17chen"  xml:space="preserve" style="display: none;">
@@ -219,8 +219,8 @@ div.paper pre {
 title = {3D Object Proposals using Stereo Imagery for Accurate Object Class Detection},
   author = {Chen, Xiaozhi and Kundu, Kaustav and Zhu, Yukun
   and Ma, Huimin and Fidler, Sanja and Urtasun, Raquel},
-  booktitle = {arXiv},
-  year = {2016}}
+  booktitle = {TPAMI},
+  year = {2017}}
                               </pre>
 
                                 <p><b>3D Object Proposals for Accurate Object Class Detection</b></br>
