mv3d val results

--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@ div.paper pre {
                               / <a href="files/mv3d/mv3d_kitti.mp4" target="_blank"><font>Demo(52M)</font></a>
                               / <a href="https://github.com/prclibo/kitti_eval" target="_blank"><font>3D Evaluation Code</font></a>
                               / <a href="javascript:toggle_visibility('lin2016fpn')">Bibtex</a></br>
-                              <a href = "files/mv3d/imagesets.tar.gz" target="_blank"><font>KITTI train/val split used in 3DOP/Mono3D/MV3D</font></a>
+                              <a href = "files/mv3d/imagesets.tar.gz" target="_blank"><font>KITTI train/val split used in 3DOP/Mono3D/MV3D</font></a></br>
+                              Results on KITTI val: 
+                              <a href = "files/mv3d/mv3d_lidar_kitti_val.tgz" target="_blank"><font>LIDAR (BV+FV)</font></a>
+                              / <a href = "files/mv3d/mv3d_lidar_mono_kitti_val.tgz" target="_blank"><font>LIDAR+Mono (BV+FV+RGB)</font></a>
                               <pre id="lin2016fpn"  xml:space="preserve" style="display: none;">
 @inproceedings{cvpr17chen,
   title = {Multi-View 3D Object Detection Network for Autonomous Driving},
