--- a/index.html
+++ b/index.html
@@ -142,14 +142,16 @@ div.paper pre {
                               <strong>Xiaozhi Chen</strong>, Huimin Ma, Ji Wan, Bo Li, Tian Xia</br>
                               <i>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2017 (<b>Spotlight</b>)</i></br>
                               <a href = "https://arxiv.org/abs/1611.07759" target="_blank"><font>Paper</font></a>
-                              / <a href="files/mv3d/mv3d_kitti.mp4" target="_blank"><font>Demo(52M)</font></a>
                               / <a href="https://github.com/prclibo/kitti_eval" target="_blank"><font>3D Evaluation Code</font></a>
-                              / <a href="javascript:toggle_visibility('lin2016fpn')">Bibtex</a></br>
+                              / <a href="javascript:toggle_visibility('cvpr17chen')">Bibtex</a></br>
                               <a href = "files/mv3d/imagesets.tar.gz" target="_blank"><font>KITTI train/val split used in 3DOP/Mono3D/MV3D</font></a></br>
                               Results on KITTI val: 
                               <a href = "files/mv3d/mv3d_lidar_kitti_val.tgz" target="_blank"><font>LIDAR (BV+FV)</font></a>
-                              / <a href = "files/mv3d/mv3d_lidar_mono_kitti_val.tgz" target="_blank"><font>LIDAR+Mono (BV+FV+RGB)</font></a>
-                              <pre id="lin2016fpn"  xml:space="preserve" style="display: none;">
+                              / <a href = "files/mv3d/mv3d_lidar_mono_kitti_val.tgz" target="_blank"><font>LIDAR+Mono (BV+FV+RGB)</font></a></br>
+                              Demo:
+                              <a href = "https://youtu.be/POqBiiLaslk" target="_blank"><font>Youtube</font></a>
+                              / <a href = "files/mv3d/mv3d_kitti.mp4" target="_blank"><font> Video </font></a></br>
+                              <pre id="cvpr17chen"  xml:space="preserve" style="display: none;">
 @inproceedings{cvpr17chen,
   title = {Multi-View 3D Object Detection Network for Autonomous Driving},
   author = {Chen, Xiaozhi and Ma, Huimin and Wan, Ji and Li, Bo and Xia, Tian},
