--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@ div.paper pre {
                             <br/>
                             <img style="float:left; margin: 16px 30px;" src="images/photo.jpg" width="150">
                             <h1 style="font-size:24pt;font-family: Georgia">Xiaozhi Chen <small>陈晓智</small></h1>
-                            <p>Ph.D. Candidate, 2012-2017 (expected)</br>
-                            Department of Electronic Engineering, Tsinghua University
+                            <p>DJI</br>
                             </p>
                             <strong>Contact</strong>
                             <p>
                                 cxz.thu AT gmail DOT com
                             </p>
+                            <strong>Internship Openings</strong>
+                            <p>I'm looking for motivated interns interested in 3D vision, deep learning and robotics. Please send me an email if you are interested in. </p>
                     </div>
             </div>
         <br/>
@@ -118,8 +119,9 @@ div.paper pre {
                     </div>
                     <div class="panel-body">
                         <ul>
-                          <li>My research interests lie in computer vision and machine learning, with particular interest in 2D/3D object detection and its applications on autonomous driving. I am supervised by Prof. <a href="http://3dimage.ee.tsinghua.edu.cn/mhm" target = "_blank">Huimin Ma</a>.
-                              <li>July 2016 - Sep. 2016, intern in Baidu Autonomous Driving Unit (ADU).
+                          <li>My research interests lie in computer vision and machine learning, with particular interest in the intersection of 3D vision and deep learning, and its applications on autonomous driving.
+                          <li>2012 - 2017, Ph.D on Electronic Engineering at Tsinghua University, under supervision of Prof. <a href="http://3dimage.ee.tsinghua.edu.cn/mhm" target = "_blank">Huimin Ma</a>.
+                          <li>July 2016 - Sep. 2016, intern in Baidu Autonomous Driving Unit (ADU).
                           <li>Jan. 2015 - May 2015, visited <a href="http://learning.cs.toronto.edu" target="_blank">Machine Learning Group</a> at University of Toronto, woking with Prof. <a href="http://www.cs.toronto.edu/~urtasun" target="_blank">Raquel Urtasun</a> and Prof. <a href="http://www.cs.utoronto.ca/~fidler" target="_blank">Sanja Fidler</a>.
                         </ul>
                     </div>
