--- a/index.html
+++ b/index.html
@@ -137,6 +137,31 @@ div.paper pre {
                           <table>
                           <tr>
                             <td>
+                              <img class="paper"  src="images/cvpr19_thumbnail.jpg" alt="Dummy Image" width="220" height="153" />
+                            </td>
+                            <td class="paper">
+                              <b>Stereo R-CNN based 3D Object Detection for Autonomous Driving</b></br>
+                              Peiliang Li, <strong>Xiaozhi Chen</strong>, Shaojie Shen</br>
+                              <i>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019</i></br>
+                              <a href = "https://arxiv.org/abs/1902.09738" target="_blank"><font>Paper</font></a>
+                              / <a href="javascript:toggle_visibility('cvpr19stereorcnn')">Bibtex</a></br>
+                              <pre id="cvpr19stereorcnn"  xml:space="preserve" style="display: none;">
+@inproceedings{cvpr19stereorcnn,
+  title = {Stereo R-CNN based 3D Object Detection for Autonomous Driving},
+  author = {Li, Peiliang, Chen, Xiaozhi and Shen, Shaojie},
+  booktitle = {IEEE CVPR},
+  year = {2019}}
+                              </pre>
+                            </td>
+                            </tr>
+                          </table>
+                          </div>
+                      <!-- End of a paper -->
+                      <!-- Begin of a paper -->
+                      <div class="paper">
+                          <table>
+                          <tr>
+                            <td>
                               <img class="paper"  src="images/cvpr17_thumbnail.jpg" alt="Dummy Image" width="220" height="153" />
                             </td>
                             <td class="paper">
