3dop kitti val results

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ title = {3D Object Proposals using Stereo Imagery for Accurate Object Class Dete
                                 / <a href="files/3dop/nips15_demo.mp4" target="_blank"><font>Demo</font></a>
                                 / <a href="http://www.cvlibs.net/datasets/kitti/eval_object.php" target="_blank"><font>KITTI Results</font></a>
                                 / <a href="javascript:toggle_visibility('nips15chen')">Bibtex</a></br>
+                                <a href="files/3dop/results_kitti_val_vgg16.tar" target="_black"><font>Results on KITTI Val</font></a></br>
                               <pre id="nips15chen"  xml:space="preserve" style="display: none;">
 @inproceedings{nips15chen,
   title = {3D Object Proposals for Accurate Object Class Detection},
