stereo rcnn code

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ div.paper pre {
                               Peiliang Li, <strong>Xiaozhi Chen</strong>, Shaojie Shen</br>
                               <i>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019</i></br>
                               <a href = "https://arxiv.org/abs/1902.09738" target="_blank"><font>Paper</font></a>
-                              / <a href="javascript:toggle_visibility('cvpr19stereorcnn')">Bibtex</a></br>
-                              / <a href = "https://github.com/HKUST-Aerial-Robotics/Stereo-RCNN" target="_blank"><font>Code</font></a>
+                              / <a href="javascript:toggle_visibility('cvpr19stereorcnn')">Bibtex</a>
+                              / <a href = "https://github.com/HKUST-Aerial-Robotics/Stereo-RCNN" target="_blank"><font>Code</font></a></br>
                               <pre id="cvpr19stereorcnn"  xml:space="preserve" style="display: none;">
 @inproceedings{cvpr19stereorcnn,
   title = {Stereo R-CNN based 3D Object Detection for Autonomous Driving},
