--- a/index.html
+++ b/index.html
@@ -137,6 +137,30 @@ div.paper pre {
                           <table>
                           <tr>
                             <td>
+                              <img class="paper"  src="images/iccv19_thumbnail.jpg" alt="Dummy Image" width="220" height="153" />
+                            </td>
+                            <td class="paper">
+                              <b>On the Over-Smoothing Problem of CNN Based Disparity Estimation</b></br>
+                              Chuangrong Chen, <strong>Xiaozhi Chen</strong>, Hui Cheng</br>
+                              <i>International Conference on Computer Vision (<b>ICCV</b>), 2019</i></br>
+                              <a href="javascript:toggle_visibility('iccv19chen')">Bibtex</a></br>
+                              <pre id="cvpr19stereorcnn"  xml:space="preserve" style="display: none;">
+@inproceedings{iccv19chen,
+  title = {On the Over-Smoothing Problem of CNN Based Disparity Estimation},
+  author = {Chen, Chuangrong, Chen, Xiaozhi and Cheng, Hui},
+  booktitle = {IEEE ICCV},
+  year = {2019}}
+                              </pre>
+                            </td>
+                            </tr>
+                          </table>
+                          </div>
+                      <!-- End of a paper -->
+                      <!-- Begin of a paper -->
+                      <div class="paper">
+                          <table>
+                          <tr>
+                            <td>
                               <img class="paper"  src="images/cvpr19_thumbnail.jpg" alt="Dummy Image" width="220" height="153" />
                             </td>
                             <td class="paper">
