added ICCV'21 paper

--- a/index.html
+++ b/index.html
@@ -101,13 +101,11 @@ div.paper pre {
                             <br/>
                             <img style="float:left; margin: 16px 30px;" src="images/photo.jpg" width="150">
                             <h1 style="font-size:24pt;font-family: Georgia">Xiaozhi Chen <small>陈晓智</small></h1>
-                            <p>DJI</br>
-                            </p>
-                            <strong>Contact</strong>
-                            <p>
-                                cxz.thu AT gmail DOT com
-                            </p>
-                            <strong>Internship Openings</strong>
+                            <a href= "https://auto.dji.com" target="_blank">DJI Automotive</a></br>
+							<a href = "https://scholar.google.com.hk/citations?user=GArEeWQAAAAJ&hl=en" target="_blank">Google Scholar</a>
+							/ <a href = "https://linkedin.com/in/xiaozhichen" target="_blank">LinkedIn</a></br>
+							<strong>Contact: </strong>cxz.thu AT gmail DOT com </br>
+                            <strong>Internship Openings:</strong>
                             <p>I'm looking for motivated interns interested in 3D vision, deep learning and robotics. Please send me an email if you are interested in. </p>
                     </div>
             </div>
@@ -132,6 +130,31 @@ div.paper pre {
                         <h2 class="panel-title">Publications</h2>
                     </div>
                     <div class="panel-body">
+					  <!-- Begin of a paper -->
+                      <div class="paper">
+                          <table>
+                          <tr>
+                            <td>
+                              <img class="paper"  src="images/iccv21_thumbnail.jpg" alt="Dummy Image" width="220" height="153" />
+                            </td>
+                            <td class="paper">
+                              <b>Geometry-based Distance Decomposition for Monocular 3D Object Detection</b></br>
+                              Xuepeng Shi, Qi Ye, <strong>Xiaozhi Chen</strong>, Chuangrong Chen, Zhixiang Chen, Tae-Kyun Kim</br>
+                              <i>International Conference on Computer Vision (<b>ICCV</b>), 2021</i></br>
+							  <a href = "https://arxiv.org/abs/2104.03775" target="_blank"><font>Paper</font></a>
+                              / <a href="javascript:toggle_visibility('iccv21shi')">Bibtex</a></br>
+                              <pre id="iccv21shi"  xml:space="preserve" style="display: none;">
+@inproceedings{iccv21shi,
+  title = {Geometry-based Distance Decomposition for Monocular 3D Object Detection},
+  author = {Shi, Xuepeng and Ye, Qi and Chen, Xiaozhi and Chen, Chuangrong and Chen, Zhixiang and Kim, Tae-Kyun},
+  booktitle = {IEEE ICCV},
+  year = {2021}}
+                              </pre>
+                            </td>
+                            </tr>
+                          </table>
+                          </div>
+                      <!-- End of a paper -->
                       <!-- Begin of a paper -->
                       <div class="paper">
                           <table>
@@ -143,11 +166,12 @@ div.paper pre {
                               <b>On the Over-Smoothing Problem of CNN Based Disparity Estimation</b></br>
                               Chuangrong Chen, <strong>Xiaozhi Chen</strong>, Hui Cheng</br>
                               <i>International Conference on Computer Vision (<b>ICCV</b>), 2019</i></br>
-                              <a href="javascript:toggle_visibility('iccv19chen')">Bibtex</a></br>
-                              <pre id="cvpr19stereorcnn"  xml:space="preserve" style="display: none;">
+							  <a href = "papers/iccv19chen.pdf" target="_blank"><font>Paper</font></a>
+                              / <a href="javascript:toggle_visibility('iccv19chen')">Bibtex</a></br>
+                              <pre id="iccv19chen"  xml:space="preserve" style="display: none;">
 @inproceedings{iccv19chen,
   title = {On the Over-Smoothing Problem of CNN Based Disparity Estimation},
-  author = {Chen, Chuangrong, Chen, Xiaozhi and Cheng, Hui},
+  author = {Chen, Chuangrong and Chen, Xiaozhi and Cheng, Hui},
   booktitle = {IEEE ICCV},
   year = {2019}}
                               </pre>
@@ -173,7 +197,7 @@ div.paper pre {
                               <pre id="cvpr19stereorcnn"  xml:space="preserve" style="display: none;">
 @inproceedings{cvpr19stereorcnn,
   title = {Stereo R-CNN based 3D Object Detection for Autonomous Driving},
-  author = {Li, Peiliang, Chen, Xiaozhi and Shen, Shaojie},
+  author = {Li, Peiliang and Chen, Xiaozhi and Shen, Shaojie},
   booktitle = {IEEE CVPR},
   year = {2019}}
                               </pre>
